Added Loader in FeedsFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Feeder</string>
+    <string name="catalog_saved">user has selected the catalogs</string>
 </resources>
